<resources>
    <string name="app_name">BMI Calculator2.0</string>
    <string name="height">Height</string>
    <string name="_170">170</string>
    <string name="cm">cm</string>
    <string name="calculate">Calculate</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="_55">55</string>
    <string name="age">Age</string>
    <string name="result">Result</string>
    <string name="normal">Normal</string>
    <string name="_00_0">00.0</string>
    <string name="your_result">Your Result</string>
    <string name="recalculate_your_bmi">Recalculate Your BMI</string>
</resources>