<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#0F1035"
    android:layout_height="match_parent"
    tools:context=".Result">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_result"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:layout_margin="20dp"
        android:background="@drawable/crdbg"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/resulttxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:text="@string/normal"
            android:textColor="#00FF0A"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/resultno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="50dp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:text="@string/_00_0"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/recalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/recalculate_your_bmi"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:backgroundTint="@color/colorButton"
        app:cornerRadius="10dp"
        android:layout_margin="40dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>