<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F1035"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/horizontel"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:id="@+id/verticle"
        />

    <RelativeLayout
        android:id="@+id/height"
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:layout_above="@id/horizontel"
        android:layout_centerInParent="true"
        android:background="@drawable/crdbg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/height"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currentHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="50dp"
            android:text="@string/_170"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/currentHeight"
            android:text="@string/cm"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/seek_for_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:progressTint="#FFFFFF"

            />
    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/calculate"
        android:textSize="24sp"
        app:cornerRadius="10dp" />

    <RelativeLayout
        android:id="@+id/male"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/notfocus"
        android:layout="@id/verticle">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_above="@id/mtxt"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:src="@drawable/male" />

        <TextView
            android:id="@+id/mtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:text="@string/male"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/female"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:layout_toEndOf="@id/verticle"
        android:background="@drawable/notfocus">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_above="@id/femtxt"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:src="@drawable/female" />

        <TextView
            android:id="@+id/femtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:text="@string/female"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/weight"
        android:layout_width="150dp"
        android:layout_height="160dp"
        android:layout_alignBottom="@id/verticle"
        android:background="@drawable/notfocus"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="120dp"
        android:layout_above="@id/height">



        <TextView
            android:id="@+id/weighttxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:text="Weight"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/weightcounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="55"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_centerInParent="true"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_toStartOf="@id/weightcounter"
            android:layout_centerInParent="true"
            android:background="@drawable/plusminus"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/minus" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:layout_toEndOf="@id/weightcounter"
            android:background="@drawable/plusminus"
            android:src="@drawable/add"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/age"
        android:layout_width="150dp"
        android:layout_height="160dp"
        android:background="@drawable/notfocus"
        android:layout_marginStart="20dp"
        android:layout_alignStart="@id/verticle"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="120dp">
        <TextView
            android:id="@+id/agetxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:text="@string/age"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/agecounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_55"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_centerInParent="true"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@id/agecounter"
            android:background="@drawable/plusminus"
            android:src="@drawable/minus" />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_toEndOf="@id/agecounter"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/plusminus"
            android:src="@drawable/add" />
</RelativeLayout>





</RelativeLayout>